--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,22 +1,23 @@
 /******Css******/
 
 .nav {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: white;
-  height: 3em;
-  z-index: 10;
-}
-.logo_Nav {
-  height: 3.8em;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: white;
+    height: 3em;
+    z-index: 10;
 }
 
-.contenedor_Combos{
+.logo_Nav {
+    height: 3.8em;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.contenedor_Combos {
     width: fit-content;
     height: fit-content;
     text-align: center;
@@ -25,7 +26,6 @@
     left: 8%;
     right: 0;
     bottom: 0;
-
 }
 
 .combosAncho {
@@ -33,133 +33,147 @@
     margin-left: auto;
     left: auto;
     right: auto;
-  }
+}
 
-.combos{
+.combos {
     margin-right: 2%;
     margin-left: 2%;
 }
 
-
 .a_menu {
-  color: #389a4f;
-  font-weight: bold;
+    color: #389a4f;
+    font-weight: bold;
 }
 
-.main_Home{
+.main_Home {
     margin-top: 4.3em;
 }
 
-.titulo_Slider{
+.titulo_Slider {
     font-weight: bold;
     font-size: 1.2em;
 }
 
-.boton_ConoceComo{
+.boton_ConoceComo {
     background-color: #389a4f;
 }
 
-.descripcionIcon{
+.descripcionIcon {
     text-align: justify;
 }
 
-@media only screen and (max-width: 1440px) {
+.titulo_contacto {
+    margin-top: 1.5em;
+}
 
-    .titulo_Slider{
+.sub_contacto {
+    padding-left: 2.5em;
+}
+
+.contacto input {
+    background-color: #26a69a;
+}
+
+.consulta textarea {
+    width: 80.7em;
+    height: 10em;
+    border-style: none;
+    border-right-width: 2em;
+    border-right-color: #444;
+}
+
+.fondo img {
+    max-width: 100%;
+    z-index: 10;
+}
+
+@media only screen and (max-width: 1440px) {
+    .titulo_Slider {
         font-size: 5em;
     }
-
 }
 
 @media only screen and (max-width: 1024px) {
-
-    .titulo_Slider{
+    .titulo_Slider {
         font-size: 4em;
     }
-
 }
 
 @media only screen and (max-width: 768px) {
-
-    .titulo_Slider{
+    .titulo_Slider {
         font-size: 3.5em;
     }
-
 }
 
 @media only screen and (max-width: 425px) {
-
-    .titulo_Slider{
+    .titulo_Slider {
         font-size: 2.4em;
     }
-
 }
 
 @media only screen and (max-width: 375px) {
-
-    .titulo_Slider{
+    .titulo_Slider {
         font-size: 2.1em;
     }
 }
 
 @media only screen and (max-width: 320px) {
-
-    .titulo_Slider{
+    .titulo_Slider {
         font-size: 2.3em;
     }
 }
 
 
-
-
-
 /****css Materialize****/
+
 nav ul a,
 nav .brand-logo {
-  color: #444;
+    color: #444;
 }
 
 p {
-  line-height: 2rem;
+    line-height: 2rem;
 }
 
 .sidenav-trigger {
-  color: #26a69a;
+    color: #26a69a;
 }
 
 .parallax-container {
-  min-height: 380px;
-  line-height: 0.8;
-  height: auto;
-  color: rgba(255, 255, 255, 0.9);
+    min-height: 380px;
+    line-height: 0.8;
+    height: auto;
+    color: rgba(255, 255, 255, 0.9);
 }
+
 .parallax-container .section {
-  width: 100%;
+    width: 100%;
 }
 
 @media only screen and (max-width: 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
+    .parallax-container .section {
+        position: absolute;
+        top: 40%;
+    }
+    #index-banner .section {
+        top: 10%;
+    }
 }
 
 @media only screen and (max-width: 600px) {
-  #index-banner .section {
-    top: 0;
-  }
+    #index-banner .section {
+        top: 0;
+    }
 }
 
 .icon-block {
-  padding: 0 15px;
+    padding: 0 15px;
 }
+
 .icon-block .material-icons {
-  font-size: inherit;
+    font-size: inherit;
 }
 
 footer.page-footer {
-  margin: 0;
+    margin: 0;
 }
