--- a/css/estilos.css
+++ b/css/estilos.css
@@ -67,19 +67,44 @@
 }
 
 .sub_contacto {
-    padding-left: 2.5em;
-}
-
-.contacto input {
-    background-color: #26a69a;
+    padding-left: 0.5em;
+    font-size: 1.5em;
 }
 
 .consulta textarea {
-    width: 80.7em;
+    padding: 1em;
     height: 10em;
-    border-style: none;
-    border-right-width: 2em;
+    border-top-style: none;
+    border-right-style: none;
+    border-left-style: none;
+    border-bottom-width: 0.1em;
+    border-radius: 1em;
     border-right-color: #444;
+    background-color: white;
+    opacity: 0.5;
+}
+
+.contacto label {
+    color: #888;
+    font-size: 1em;
+    font-weight: 640;
+    text-shadow: 2px 0 0 white, -2px 0 0 white, 0 2px 0 white, 0 -2px 0 white, 1px 1px white, -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white;
+}
+
+.tel input {
+    background-color: white;
+    opacity: 0.5;
+}
+
+.consulta {
+    color: white
+}
+
+.mainContacto {
+    background-image: url(/img/fondoContacto.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: 0em;
 }
 
 .fondo img {
@@ -91,11 +116,17 @@
     .titulo_Slider {
         font-size: 5em;
     }
+    .sub_contacto {
+        padding-left: 3em;
+    }
 }
 
 @media only screen and (max-width: 1024px) {
     .titulo_Slider {
         font-size: 4em;
+    }
+    .sub_contacto {
+        padding-left: 2.5em;
     }
 }
 
@@ -109,6 +140,16 @@
     .titulo_Slider {
         font-size: 2.4em;
     }
+    .mainContacto h1 {
+        padding-top: 0.5em;
+        font-size: 3em;
+    }
+    .sub_contacto {
+        padding-left: 1em;
+    }
+    .mainContacto {
+        background-position-y: 45em;
+    }
 }
 
 @media only screen and (max-width: 375px) {
@@ -120,6 +161,16 @@
 @media only screen and (max-width: 320px) {
     .titulo_Slider {
         font-size: 2.3em;
+    }
+    .mainContacto h1 {
+        padding-top: 0.5em;
+        font-size: 2.5em;
+    }
+    .sub_contacto {
+        font-size: 1.2em;
+    }
+    .mainContacto {
+        background-position-y: 50em;
     }
 }
 
