--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,88 +1,88 @@
 /******Css******/
 
 .nav {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: white;
-  height: 3em;
-  z-index: 10;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: white;
+    height: 3em;
+    z-index: 10;
 }
 
 .logo_Nav {
-  height: 3.8em;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
+    height: 3.8em;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
 }
 
 .contenedor_Combos {
-  width: fit-content;
-  height: fit-content;
-  text-align: center;
-  position: relative;
-  top: 0;
-  left: 8%;
-  right: 0;
-  bottom: 0;
+    width: fit-content;
+    height: fit-content;
+    text-align: center;
+    position: relative;
+    top: 0;
+    left: 8%;
+    right: 0;
+    bottom: 0;
 }
 
 .combosAncho {
-  width: 27%;
-  margin-left: auto;
-  left: auto;
-  right: auto;
+    width: 27%;
+    margin-left: auto;
+    left: auto;
+    right: auto;
 }
 
 .combos {
-  margin-right: 2%;
-  margin-left: 2%;
+    margin-right: 2%;
+    margin-left: 2%;
 }
 
 .a_menu {
-  color: #389a4f;
-  font-weight: bold;
+    color: #389a4f;
+    font-weight: bold;
 }
 
 .main_Home {
-  margin-top: 4.3em;
+    margin-top: 4.3em;
 }
 
 .titulo_Slider {
-  font-weight: bold;
-  font-size: 1.2em;
+    font-weight: bold;
+    font-size: 1.2em;
 }
 
 .boton_ConoceComo {
-  background-color: #389a4f;
+    background-color: #389a4f;
 }
 
 .descripcionIcon {
-  text-align: justify;
+    text-align: justify;
 }
 
 .icono {
-  font-size: 2em;
-  transition: font-size 0.25s;
-  color: green;
+    font-size: 2em;
+    transition: font-size 0.25s;
+    color: green;
 }
 
 .icono:hover {
-  font-size: 2.5em;
+    font-size: 2.5em;
 }
 
 .combos i {
     color: white;
     font-size: 3em;
-  }
+}
 
-  .combos h3 {
+.combos h3 {
     color: white;
     padding-top: 10px;
-  }
+}
 
-  .combos {
+.combos {
     background-color: #389a4f;
     border-radius: 2em;
     height: 10em;
@@ -91,13 +91,13 @@
     transition: opacity 0.25s;
     margin-right: 0px;
     margin-left: 0px;
-  }
+}
 
-  .combos:hover {
+.combos:hover {
     opacity: 0;
-  }
+}
 
-  .combos_Informacion {
+.combos_Informacion {
     position: relative;
     z-index: -1;
     top: -150px;
@@ -109,47 +109,46 @@
     width: 26em;
     margin-right: 0px;
     margin-left: 0px;
-  }
+}
 
-  .combos_Informacion p {
+.combos_Informacion p {
     color: green;
     font-size: 2em;
     margin-left: 2px;
     margin-right: 2px;
-  }
+}
 
-  .contenedorCombos {
+.contenedorCombos {
     height: 10em;
-  }
+}
 
-  .botonCombo {
+.botonCombo {
     display: block;
     height: 10em;
-  }
+}
 
-  .tituloCombos {
+.tituloCombos {
     margin-bottom: 5%;
     font-size: 4.5em;
     margin-top: 0;
-  }
-
-.logo_footer {
-  height: 3.8em;
-  margin-right: 5px;
-  float: left;
 }
 
-@media only screen and (max-width: 1440px) {
-  .titulo_contacto {
+.logo_footer {
+    height: 3.8em;
+    margin-right: 5px;
+    float: left;
+}
+
+.titulo_contacto {
     margin-top: 1.5em;
-  }
+}
 
-  .sub_contacto {
-    padding-left: 0.5em;
+.sub_contacto {
+    padding-left: 28.5em;
     font-size: 1.5em;
-  }
+}
 
-  .consulta textarea {
+.consulta textarea {
     padding: 1em;
     height: 10em;
     border-top-style: none;
@@ -160,343 +159,352 @@
     border-right-color: #444;
     background-color: white;
     opacity: 0.5;
-  }
+}
 
-  .contacto label {
+.contacto label {
     color: #888;
     font-size: 1em;
     font-weight: 640;
-    text-shadow: 2px 0 0 white, -2px 0 0 white, 0 2px 0 white, 0 -2px 0 white,
-      1px 1px white, -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white;
-  }
+    text-shadow: 2px 0 0 white, -2px 0 0 white, 0 2px 0 white, 0 -2px 0 white, 1px 1px white, -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white;
+}
 
-  .tel input {
+.tel input {
     background-color: white;
     opacity: 0.5;
-  }
+}
 
-  .consulta {
+.consulta {
     color: white;
-  }
+}
 
-  .mainContacto {
+.mainContacto {
     background-image: url(/img/fondoContacto.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: 0em;
-  }
-
-  .fondo img {
-    max-width: 100%;
-    z-index: 10;
-  }
-
-  .botonCombo {
-    display: block;
-  }
 }
 
 @media only screen and (max-width: 1440px) {
-  .titulo_Slider {
-    font-size: 5em;
-  }
-  .sub_contacto {
-    padding-left: 3em;
-  }
+    .titulo_contacto {
+        margin-top: 1.5em;
+    }
+    .sub_contacto {
+        padding-left: 0.5em;
+        font-size: 1.5em;
+    }
+    .consulta textarea {
+        padding: 1em;
+        height: 10em;
+        border-top-style: none;
+        border-right-style: none;
+        border-left-style: none;
+        border-bottom-width: 0.1em;
+        border-radius: 1em;
+        border-right-color: #444;
+        background-color: white;
+        opacity: 0.5;
+    }
+    .contacto label {
+        color: #888;
+        font-size: 1em;
+        font-weight: 640;
+        text-shadow: 2px 0 0 white, -2px 0 0 white, 0 2px 0 white, 0 -2px 0 white, 1px 1px white, -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white;
+    }
+    .tel input {
+        background-color: white;
+        opacity: 0.5;
+    }
+    .consulta {
+        color: white;
+    }
+    .mainContacto {
+        background-image: url(/img/fondoContacto.jpg);
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-position: 0em;
+    }
+    .fondo img {
+        max-width: 100%;
+        z-index: 10;
+    }
+    .botonCombo {
+        display: block;
+    }
+}
 
-  .combos i {
-    color: white;
-    font-size: 3em;
-  }
-
-  .combos h3 {
-    color: white;
-    padding-top: 10px;
-  }
-
-  .combos {
-    background-color: #389a4f;
-    border-radius: 2em;
-    height: 10em;
-    width: 26em;
-    opacity: 1;
-    transition: opacity 0.25s;
-    margin-right: 0px;
-    margin-left: 0px;
-  }
-
-  .combos:hover {
-    opacity: 0;
-  }
-
-  .combos_Informacion {
-    position: relative;
-    z-index: -1;
-    top: -150px;
-    border-radius: 2em;
-    border: solid;
-    border-color: rgba(0, 128, 0, 0.699);
-    background-color: #389a4f65;
-    height: 10em;
-    width: 26em;
-    margin-right: 0px;
-    margin-left: 0px;
-  }
-
-  .combos_Informacion p {
-    color: green;
-    font-size: 2em;
-    margin-left: 2px;
-    margin-right: 2px;
-  }
-
-  .contenedorCombos {
-    height: 10em;
-  }
-
-  .botonCombo {
-    display: block;
-    height: 10em;
-  }
-
-  .tituloCombos {
-    margin-bottom: 5%;
-    font-size: 4.5em;
-    margin-top: 0;
-  }
+@media only screen and (max-width: 1440px) {
+    .titulo_Slider {
+        font-size: 5em;
+    }
+    .sub_contacto {
+        padding-left: 3em;
+    }
+    .combos i {
+        color: white;
+        font-size: 3em;
+    }
+    .combos h3 {
+        color: white;
+        padding-top: 10px;
+    }
+    .combos {
+        background-color: #389a4f;
+        border-radius: 2em;
+        height: 10em;
+        width: 26em;
+        opacity: 1;
+        transition: opacity 0.25s;
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+    .combos:hover {
+        opacity: 0;
+    }
+    .combos_Informacion {
+        position: relative;
+        z-index: -1;
+        top: -150px;
+        border-radius: 2em;
+        border: solid;
+        border-color: rgba(0, 128, 0, 0.699);
+        background-color: #389a4f65;
+        height: 10em;
+        width: 26em;
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+    .combos_Informacion p {
+        color: green;
+        font-size: 2em;
+        margin-left: 2px;
+        margin-right: 2px;
+    }
+    .contenedorCombos {
+        height: 10em;
+    }
+    .botonCombo {
+        display: block;
+        height: 10em;
+    }
+    .tituloCombos {
+        margin-bottom: 5%;
+        font-size: 4.5em;
+        margin-top: 0;
+    }
 }
 
 @media only screen and (max-width: 1024px) {
-  .titulo_Slider {
-    font-size: 4em;
-  }
-  .sub_contacto {
-    padding-left: 2.5em;
-  }
-
-  .tituloCombos {
-    font-size: 47px;
-  }
-
-  .combos {
-    width: 20em;
-    height: 10.5em;
-    margin: 0;
-    padding: 0;
-    background-color: #389a4f;
-    border-radius: 2em;
-    opacity: 1;
-    transition: opacity 0.25s;
-  }
-
-  .combos_Informacion {
-    width: 20em;
-    height: 10.5em;
-    margin: 0;
-    padding: 0;
-  }
-
-  .combos_Informacion p {
-    margin-top: 24px;
-    font-size: 1.7em;
-  }
+    .titulo_Slider {
+        font-size: 4em;
+    }
+    .sub_contacto {
+        padding-left: 2.5em;
+    }
+    .tituloCombos {
+        font-size: 47px;
+    }
+    .combos {
+        width: 20em;
+        height: 10.5em;
+        margin: 0;
+        padding: 0;
+        background-color: #389a4f;
+        border-radius: 2em;
+        opacity: 1;
+        transition: opacity 0.25s;
+    }
+    .combos_Informacion {
+        width: 20em;
+        height: 10.5em;
+        margin: 0;
+        padding: 0;
+    }
+    .combos_Informacion p {
+        margin-top: 24px;
+        font-size: 1.7em;
+    }
 }
 
 @media only screen and (max-width: 768px) {
-  .titulo_Slider {
-    font-size: 3.5em;
-  }
-
-  .tituloCombos {
-    font-size: 34px;
-  }
-
-  .combos {
-    width: 15em;
-    height: 10.5em;
-    margin: 0;
-    padding: 0;
-    background-color: #389a4f;
-    border-radius: 2em;
-    opacity: 1;
-    transition: opacity 0.25s;
-  }
-
-  .combos_Informacion {
-    width: 15em;
-    height: 10.5em;
-    margin: 0;
-    padding: 0;
-  }
-
-  .combos_Informacion p {
-    margin-top: 24px;
-    font-size: 1.2em;
-  }
+    .titulo_Slider {
+        font-size: 3.5em;
+    }
+    .tituloCombos {
+        font-size: 34px;
+    }
+    .combos {
+        width: 15em;
+        height: 10.5em;
+        margin: 0;
+        padding: 0;
+        background-color: #389a4f;
+        border-radius: 2em;
+        opacity: 1;
+        transition: opacity 0.25s;
+    }
+    .combos_Informacion {
+        width: 15em;
+        height: 10.5em;
+        margin: 0;
+        padding: 0;
+    }
+    .combos_Informacion p {
+        margin-top: 24px;
+        font-size: 1.2em;
+    }
 }
 
 @media only screen and (max-width: 425px) {
-  .titulo_Slider {
-    font-size: 2.4em;
-  }
-  .mainContacto h1 {
-    padding-top: 0.5em;
-    font-size: 3em;
-  }
-  .sub_contacto {
-    padding-left: 1em;
-  }
-  .mainContacto {
-    background-position-y: 45em;
-  }
-
-  .tituloCombos {
-    font-size: 34px;
-  }
-
-  .combos {
-    width: 26em;
-    height: 10.5em;
-    margin: 0;
-    padding: 0;
-    background-color: #389a4f;
-    border-radius: 2em;
-    opacity: 1;
-    transition: opacity 0.25s;
-  }
-
-  .combos_Informacion {
-    width: 26em;
-    height: 10.5em;
-    margin: 0;
-    padding: 0;
-  }
-
-  .combos_Informacion p {
-    margin-top: 24px;
-  }
+    .titulo_Slider {
+        font-size: 2.4em;
+    }
+    .mainContacto h1 {
+        padding-top: 0.5em;
+        font-size: 3em;
+    }
+    .sub_contacto {
+        padding-left: 1em;
+    }
+    .mainContacto {
+        background-position-y: 45em;
+    }
+    .tituloCombos {
+        font-size: 34px;
+    }
+    .combos {
+        width: 26em;
+        height: 10.5em;
+        margin: 0;
+        padding: 0;
+        background-color: #389a4f;
+        border-radius: 2em;
+        opacity: 1;
+        transition: opacity 0.25s;
+    }
+    .combos_Informacion {
+        width: 26em;
+        height: 10.5em;
+        margin: 0;
+        padding: 0;
+    }
+    .combos_Informacion p {
+        margin-top: 24px;
+    }
 }
 
 @media only screen and (max-width: 375px) {
-  .titulo_Slider {
-    font-size: 2.1em;
-  }
-
-  .tituloCombos {
-    font-size: 30px;
-  }
-
-  .combos {
-    width: 22em;
-    height: 10.5em;
-    margin: 0;
-    padding: 0;
-  }
-
-  .combos_Informacion {
-    width: 22em;
-    height: 10.5em;
-    margin: 0;
-    padding: 0;
-  }
-
-  .combos_Informacion p {
-    margin-top: 14px;
-  }
+    .titulo_Slider {
+        font-size: 2.1em;
+    }
+    .tituloCombos {
+        font-size: 30px;
+    }
+    .combos {
+        width: 22em;
+        height: 10.5em;
+        margin: 0;
+        padding: 0;
+    }
+    .combos_Informacion {
+        width: 22em;
+        height: 10.5em;
+        margin: 0;
+        padding: 0;
+    }
+    .combos_Informacion p {
+        margin-top: 14px;
+    }
 }
 
 @media only screen and (max-width: 320px) {
-  .titulo_Slider {
-    font-size: 2.3em;
-  }
-  .mainContacto h1 {
-    padding-top: 0.5em;
-    font-size: 2.5em;
-  }
-  .sub_contacto {
-    font-size: 1.2em;
-  }
-  .mainContacto {
-    background-position-y: 50em;
-  }
-
-  .tituloCombos {
-    font-size: 26px;
-  }
-
-  .combos {
-    width: 19em;
-    height: 10.5em;
-    margin: 0;
-    padding: 0;
-    background-color: #389a4f;
-    border-radius: 2em;
-    opacity: 1;
-    transition: opacity 0.25s;
-  }
-
-  .combos_Informacion {
-    width: 19em;
-    height: 10.5em;
-    margin: 0;
-    padding: 0;
-  }
-
-  .combos_Informacion p {
-    margin-top: 11px;
-  }
+    .titulo_Slider {
+        font-size: 2.3em;
+    }
+    .mainContacto h1 {
+        padding-top: 0.5em;
+        font-size: 2.5em;
+    }
+    .sub_contacto {
+        font-size: 1.2em;
+    }
+    .mainContacto {
+        background-position-y: 50em;
+    }
+    .tituloCombos {
+        font-size: 26px;
+    }
+    .combos {
+        width: 19em;
+        height: 10.5em;
+        margin: 0;
+        padding: 0;
+        background-color: #389a4f;
+        border-radius: 2em;
+        opacity: 1;
+        transition: opacity 0.25s;
+    }
+    .combos_Informacion {
+        width: 19em;
+        height: 10.5em;
+        margin: 0;
+        padding: 0;
+    }
+    .combos_Informacion p {
+        margin-top: 11px;
+    }
 }
+
 
 /****css Materialize****/
 
 nav ul a,
 nav .brand-logo {
-  color: #444;
+    color: #444;
 }
 
 p {
-  line-height: 2rem;
+    line-height: 2rem;
 }
 
 .sidenav-trigger {
-  color: #26a69a;
+    color: #26a69a;
 }
 
 .parallax-container {
-  min-height: 380px;
-  line-height: 0.8;
-  height: auto;
-  color: rgba(255, 255, 255, 0.9);
+    min-height: 380px;
+    line-height: 0.8;
+    height: auto;
+    color: rgba(255, 255, 255, 0.9);
 }
 
 .parallax-container .section {
-  width: 100%;
+    width: 100%;
 }
 
 @media only screen and (max-width: 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
+    .parallax-container .section {
+        position: absolute;
+        top: 40%;
+    }
+    #index-banner .section {
+        top: 10%;
+    }
 }
 
 @media only screen and (max-width: 600px) {
-  #index-banner .section {
-    top: 0;
-  }
+    #index-banner .section {
+        top: 0;
+    }
 }
 
 .icon-block {
-  padding: 0 15px;
+    padding: 0 15px;
 }
 
 .icon-block .material-icons {
-  font-size: inherit;
+    font-size: inherit;
 }
 
 footer.page-footer {
-  margin: 0;
+    margin: 0;
 }
